RESOLVED FIXED208773
[GTK] Fix compilation with disabled OpenGL
https://bugs.webkit.org/show_bug.cgi?id=208773
Summary [GTK] Fix compilation with disabled OpenGL
Konstantin Tokarev
Reported 2020-03-07 15:21:11 PST
Fix compilation with disabled OpenGL (-DENABLE_OPENGL=OFF)
Attachments
Patch (2.87 KB, patch)
2020-03-07 15:22 PST, Konstantin Tokarev
no flags
Konstantin Tokarev
Comment 1 2020-03-07 15:22:25 PST
EWS Watchlist
Comment 2 2020-03-07 15:23:24 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Yusuke Suzuki
Comment 3 2020-03-08 01:48:28 PST
Comment on attachment 392901 [details] Patch r=me
WebKit Commit Bot
Comment 4 2020-03-08 03:58:59 PDT
Comment on attachment 392901 [details] Patch Clearing flags on attachment: 392901 Committed r258103: <https://trac.webkit.org/changeset/258103>
WebKit Commit Bot
Comment 5 2020-03-08 03:59:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.