[GTK] Fix compilation with disabled OpenGL https://bugs.webkit.org/show_bug.cgi?id=208773

Reviewed by Yusuke Suzuki.

Source/WebCore:

* html/OffscreenCanvas.h:

Source/WebKit:

* UIProcess/API/glib/WebKitProtocolHandler.cpp:
(WebKit::WebKitProtocolHandler::handleGPU):


Canonical link: https://commits.webkit.org/221712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258103 268f45cc-cd09-0410-ab3c-d52691b4dbfc